doc(setup-idea): sync EN doc for previous PR (#327)